// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`direct (монтирование) => дефолтное состояние 1`] = `
<div
  class="direct direct-public direct-public_platform_desktop"
/>
`;

exports[`direct (монтирование) => правый Директ 1`] = `
<div
  class="direct-public__right-direct-wrapper"
>
  <div
    class="direct-public__sticky-box"
  >
    <div
      class="direct direct-public direct-public_platform_desktop direct-public_position_right direct-public_dir"
    />
  </div>
</div>
`;

exports[`direct (монтирование) => с параметрами 1`] = `
<div
  class="direct direct-public direct-public_platform_desktop direct-public_position_top direct-public_image"
/>
`;

exports[`direct (серверный render) => дефолтное состояние 1`] = `
<div
  class="direct direct-public direct-public_platform_desktop"
/>
`;

exports[`direct (серверный render) => с параметрами 1`] = `
<div
  class="direct direct-public direct-public_platform_desktop direct-public_position_top direct-public_image"
/>
`;
